# heatflow

./: Cargo.toml
projects/heatflow/: Cargo.toml
projects/heatflow-cs/: Cargo.toml  build.rs
projects/heatflow-cs/binding/: RsMethods.cs
projects/heatflow-cs/src/: heat_flow.rs  heat_map.rs  lib.rs
projects/heatflow-cs/tests/: main.rs
projects/heatflow/src/: lib.rs
projects/heatflow/src/heat_flow/: display.rs  flow.rs  iters.rs  mapping.rs  mod.rs
projects/heatflow/src/heatflow/: display.rs  iters.rs  mod.rs
projects/heatflow/src/queue/: display.rs  iters.rs  mod.rs
projects/heatflow/tests/: main.rs
