[package]
name = "heatflow-cs"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[lib]
name = "rs_heatflow"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.6"
shape-core = "0.1.3"

[dependencies.heatflow]
#version = "0.0.0"
path = "../heatflow"

[dev-dependencies]
csbindgen = "1.6.0"

[features]
default = []
