[package]
name = "heatflow"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
ndarray = "0.15.6"
shape-core = "0.1.3"

[dev-dependencies]

[features]
default = []
